cicd/production/backend-rollout.yml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: backend-rollout
spec:
  replicas: 2
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: simkids/dealivery-backend:1.56
          #image: simkids/dealivery-backend:v2 <- 새로운 버전 배포 할 때
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
  strategy:
    blueGreen:
      #activeService는 현재 운영중인 Blue 서비스
      activeService: backend-service-active

      #previewService는 새롭게 배포될 Green 서비스
      previewService: backend-service-preview
