cicd/production/backend-service-oauth-preview.yml
kind: Service
apiVersion: v1
metadata:
  name: backend-service-oauth-preview
spec:
  type: NodePort
  selector:
    app: oauth2-proxy
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30104
