cicd/production/backend-service-preview.yml
kind: Service
apiVersion: v1
metadata:
  name: prod-backend-service-preview
spec:
  type: NodePort
  selector:
    app: prod-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30102
