cicd/production/frontend-service.yml
kind: Service
apiVersion: v1
metadata:
  name: frontend-service-active
spec:
  type: NodePort
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30100
